# NDTP-DO

./: .env  .env.example  .gitignore  CHANGES_SUMMARY.md  DOCUMENTS_PARSER_README.md  FINAL_STATUS.md  FIX_PYTHON_313.md  IMPROVEMENTS_README.md  LISTS_PARSER_README.md  NOTIFICATIONS_README.md  QUIZ_FIXES_SUMMARY.md  QUIZ_README.md  QUIZ_UPDATE_SUMMARY.md  RAG_COMPARISON.md  README.md  README_brainstorm.md  STUDENTS_PARSER_COMPLETE.md  STUDENTS_PARSER_FINAL.md  STUDENTS_PARSER_README.md  STUDENTS_PARSER_UPDATE.md  bot.py  bot_full_log.txt  bot_minimal.py  brainstorm_mod.py  calendar_module.py  context.md  cost_calculator.py  current_shifts.json  debug_bot.py  debug_imports.py  demo_students_list.json  demo_students_parser.py  documents_cache.json  documents_parser.py  fixed_bot_logs.txt  install_deps.py  knowledge_base.json  last_demo_students_update.txt  last_documents_update.txt  last_schedule_update.txt  (+34 more)
cache/: lists_cache.json
data/cache/: documents_cache.json
data/knowledge_base/: latest_technopark_data.json
data/notifications/: notification_subscriptions.json
data/parsers/: current_shifts.json  documents_cache.json  last_documents_update.txt  (+1 more)
docs/: DEVELOPER_GUIDE.md  README.md  TODO
scripts/: create_users_from_enrollment.py
tests/: test_bot_startup.py  test_fixed_bot.py  test_improvements.py  test_main_function.py  test_optimized_rag.py  test_quiz.py  test_quiz_advanced.py  test_quiz_buttons.py  test_quiz_command.py  test_quiz_fsm.py  test_quiz_prompt.py  test_shifts.json  test_students_parser.py  test_telegram_connection.py  test_title_shortening.py
(+31 files in other folders)
